<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="410dp"
                        android:layout_height="275dp"
                        android:src="@drawable/bgr3"
                        android:contentDescription="@string/todo" />
                    <ImageView
                        android:layout_width="410dp"
                        android:layout_height="275dp"
                        android:src="@drawable/bgr2"
                        android:contentDescription="@string/todo" />
                    <ImageView
                        android:layout_width="410dp"
                        android:layout_height="275dp"
                        android:src="@drawable/bgr1"
                        android:contentDescription="@string/todo" />
                </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txTv_Subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/article_title"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txTv_Article"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:lineSpacingExtra="5sp"
                android:scrollbars="vertical"
                android:text="@string/article_content" />

            <TextView
                android:id="@+id/txTv_Subheading2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:scrollbars="vertical"
                android:text="@string/article_title2" />

            <TextView
                android:id="@+id/txTv_Subheading3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:lineSpacingExtra="5sp"
                android:autoLink="all"
                android:scrollbars="horizontal"
                android:text="@string/article_title3"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txTv_Subheading4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/article_title4"
                android:textAppearance="@android:style/TextAppearance" />

            <TextView
                android:id="@+id/txTv_Subheading5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:drawableStart="@drawable/logoupgris"
                android:padding="12dp"
                android:text="@string/article_title5"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_uts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/uts" />

        </LinearLayout>
     </ScrollView>
</RelativeLayout>